# hwinfo-prometheus

./: Cargo.toml  build.rs
.github/workflows/: build.yml
src/: hwinfo_reader.rs  hwinfo_types.rs  main.rs  table_types.rs
